--- a/client/styles/header-info.scss
+++ b/client/styles/header-info.scss
@@ -5,7 +5,8 @@
   background: #f2f2f2;
   display: flex;
   align-items: center;
-  
+  justify-content: flex-end;
+  padding: 0px 25px;
   
   
   input[type='checkbox'] {
