--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -3,6 +3,7 @@
 @import './posts.scss';
 @import './grid.scss';
 @import './corona.scss';
+@import './profile.scss';
 
 
 html,
@@ -28,12 +29,25 @@ a {
   max-width: 1335px;
   margin: auto;
 }
+
+.chronology-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .main {
   padding: 45px;
   background: #F2F2F2;
   border-radius: 10px;
   margin-top: 15px;
 
+}
+.post-main {
+  padding: 45px 122px; 
+  background: #F2F2F2;
+  border-radius: 10px;
+  margin-top: 15px;
 }
 .mt-15 {
   margin-top: 15px;
