--- a/client/styles/posts.scss
+++ b/client/styles/posts.scss
@@ -53,7 +53,7 @@
   background: rgb(255, 255, 255);
   border-radius: 10px;
   overflow: hidden;
-  
+
   * {
     margin: 0px;
     padding: 0px;
@@ -70,7 +70,6 @@
       color: #b88b59;
       font-weight: 600;
       font-size: 12px;
-     
     }
 
     h4 {
@@ -80,9 +79,9 @@
     }
 
     p {
-        color: #C4C4C4;
-        font-weight: normal;
-font-size: 12px;
+      color: #c4c4c4;
+      font-weight: normal;
+      font-size: 12px;
     }
   }
   .post-medium-image-container {
@@ -96,6 +95,84 @@ font-size: 12px;
       background-size: contain;
     }
   }
+}
 
-  
+.chronology-post {
+  width: 100%;
+  display: flex;
+  background: rgb(255, 255, 255);
+  border-radius: 10px;
+  overflow: hidden;
+  min-height: 200px;
+
+  * {
+    margin: 0px;
+  }
+
+  .chronology-post-img {
+    width: 375px;
+    height: 100%;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+    }
+  }
+
+  .chronology-post-content {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    span {
+      font-size: 12px;
+      color: #b88b59;
+      margin-bottom: 6px;
+    }
+
+    h3 {
+      font-size: 20px;
+      font-weight: 500;
+    }
+  }
+}
+
+.post-content {
+  .post-content-head {
+    width: 826px;
+
+    * {
+      margin: 0px;
+      padding: 0px;
+    }
+
+    span {
+      color: #b88b59;
+      font-size: 16px;
+      font-weight: 500;
+    }
+
+    h1 {
+      font-size: 38px;
+      font-weight: bold;
+      margin: 15px 0px;
+    }
+
+    p {
+      color: rgba(0, 0, 0, 0.4);
+      font-size: 12px;
+    }
+  }
+  .post-content-body {
+    width: 650px;
+
+    p {
+      font-weight: normal;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+  }
 }
