--- a/client/styles/grid.scss
+++ b/client/styles/grid.scss
@@ -3,10 +3,11 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-column-gap: 15px;
   grid-row-gap: 15px;
-  grid-auto-rows: minmax(330px, auto);
+  grid-auto-rows: minmax(400px, auto);
   div:nth-child(6n + 2),
   div:nth-child(6n + 1) {
     grid-column: span 3;
+    
   }
   div:nth-child(6n + 3) {
     grid-column: span 6;
@@ -23,7 +24,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-column-gap: 15px;
   grid-row-gap: 15px;
-  grid-auto-rows: minmax(330px, auto);
+  grid-auto-rows: minmax(330px, 470px);
   div:nth-child(5n + 4),
   div:nth-child(5n + 5) {
     grid-column: span 3;
@@ -40,7 +41,7 @@
   grid-template-columns: 2fr 2fr;
   grid-column-gap: 15px;
   grid-row-gap: 15px;
-  grid-auto-rows: minmax(409px, auto);
+  grid-auto-rows: minmax(409px, 409px);
 }
 
 .razbor-second-grid {
