--- a/client/styles/posts.scss
+++ b/client/styles/posts.scss
@@ -43,19 +43,30 @@
   }
 }
 
+.post-link {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  z-index: 12;
+
+}
 .posts-min {
   width: 100%;
   background: rgb(255, 255, 255);
   border-radius: 10px;
   padding: 15px;
   min-height: 335px;
+  position: relative;
 }
 
 .post-medium {
   background: rgb(255, 255, 255);
   border-radius: 10px;
   overflow: hidden;
-
+ position: relative;
   * {
     margin: 0px;
     padding: 0px;
@@ -119,7 +130,7 @@
   border-radius: 10px;
   overflow: hidden;
   min-height: 200px;
-
+position: relative;
   * {
     margin: 0px;
   }
