--- a/client/styles/header.scss
+++ b/client/styles/header.scss
@@ -30,7 +30,7 @@
   .header-logo-container {
     width: 100px;
     height: 21px;
-    cur
+    cursor: pointer;
     img {
       width: 100%;
       height: auto;
@@ -50,6 +50,29 @@
         font-size: 14px;
         font-weight: 500;
       }
+    }
+  }
+}
+.MuiMenu-root {
+ opacity: 1;
+    transform: none;
+    transition: opacity 277ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, transform 184ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    top: 48px;
+    left: 1100px !important;
+    transform-origin: 189px 0px;
+}
+.MuiMenu-list {
+  padding: 0px 20px !important;
+  width: 280px;
+
+  li {
+    padding: 17px 0px;
+    border-bottom: 1px solid grey;
+
+    &:hover {
+      background: none;
+      opacity: 0.8;
+
     }
   }
 }
