--- a/client/styles/posts.scss
+++ b/client/styles/posts.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   background-size: contain;
   position: relative;
-  
+
   img {
     width: 100%;
     height: 100%;
@@ -51,7 +51,6 @@
   left: 0;
   cursor: pointer;
   z-index: 12;
-
 }
 .posts-min {
   width: 100%;
@@ -66,7 +65,7 @@
   background: rgb(255, 255, 255);
   border-radius: 10px;
   overflow: hidden;
- position: relative;
+  position: relative;
   * {
     margin: 0px;
     padding: 0px;
@@ -130,7 +129,7 @@
   border-radius: 10px;
   overflow: hidden;
   min-height: 200px;
-position: relative;
+  position: relative;
   * {
     margin: 0px;
   }
@@ -201,4 +200,11 @@ position: relative;
       margin-bottom: 20px;
     }
   }
+}
+.MuiCheckbox-root {
+  position: absolute !important;
+  z-index: 99;
+  bottom: 0px;
+  right: 0px;
+  border: rgb(165, 165, 165) !important;
 }
